tests/baselines/reference/unusedTypeParameterInMethod2.errors.txt
tests/cases/compiler/unusedTypeParameterInMethod2.ts(2,18): error TS6133: 'Y' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInMethod2.ts (1 errors) ====
    class A {
        public f1<X, Y, Z>() {
                     ~
!!! error TS6133: 'Y' is declared but never used.
            var a: X;
            var b: Z;
            a;
            b;
        }
    }